<resources>
    <string name="app_name">annisa kinanti</string>
    <string name="ppkinan1">ppkinan</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="ppkinan2">ppkinan2</string>
    <string name="annisakinanti">Annisa Kinanti</string>
    <string name="fotoku">fotoku</string>
    <string name="_15_desember_2001">15 Desember 2001</string>
    <string name="quote2">quote</string>
    <string name="rekayasa_perangkat_lunak_aplikasi">Rekayasa Perangkat Lunak Aplikasi</string>
    <string name="universitas_teknlogi_digital_indonesia">Universitas Teknlogi Digital Indonesia</string>
    <string name="kinan_ak15">\@kinanti_ak15</string>
    <string name="kinantiak833_gmail_com">kinantiak833@gmail.com</string>
    <string name="utdii">utdii</string>
</resources>